Added Pytests to Github workflow

--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -20,3 +20,11 @@ jobs:
 
       - name: Run pre-commit hooks
         run: pre-commit run --all-files
+
+      - name: Install pytest and project dependencies
+        run: |
+          pip install pytest
+          pip install -e .
+
+      - name: Run pytest
+        run: pytest tests/ -v
