--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "CCMetrics"
-version = "0.0.1"
+version = "0.0.2"
 authors = [
     {name = "Alexander Jaus", email = "alexander.jaus@kit.edu"},
 ]
@@ -15,7 +15,6 @@ keywords = ["medical segmentation", "tumor segmentation", "instance segmentation
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Science/Research",
-    "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
     "Topic :: Scientific/Engineering :: Medical Science Apps.",
@@ -29,6 +28,9 @@ dependencies = [
     "nibabel",
     "tqdm"
 ]
+
+license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"
+license-files = ["LICENSE"]
 
 [project.urls]
 Homepage = "https://github.com/alexanderjaus/CC-Metrics"
